[package]
name = "pearlden"
version = "0.1.0"
edition = "2024"
description = "a tagging system"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.40", features = ["cargo"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
