[package]
name = "pearlden"
version = "0.1.0"
edition = "2024"
description = "a tagging system"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["tracing"] }
clap = { version = "4.5.40", features = ["cargo"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
